--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freeradius (3.2.1+git) unstable; urgency=medium
+
+  * New upstream version.
+
+ -- Alan DeKok <aland@freeradius.org>  Thu, 21 Apr 2022 12:00:00 -0500
+
 freeradius (3.2.0+git) unstable; urgency=medium
 
   * New upstream version.
