--- a/doc/antora/modules/reference/pages/index.adoc
+++ b/doc/antora/modules/reference/pages/index.adoc
@@ -4,4 +4,4 @@ We have a lot of stuff
 
 * xref:type/index.adoc[Data Types] in the server
 * xref:unlang/index.adoc[Unlang] syntax
-* xref:xlat/index.adoc[String expansions] i.e. "xlat"s.
+* xref:xlat/index.adoc[Dynamic expansions] i.e. "xlat"s.
