--- a/doc/antora/modules/reference/pages/type/index.adoc
+++ b/doc/antora/modules/reference/pages/type/index.adoc
@@ -87,24 +87,24 @@ error cases where the parsing was incorrect.
 The solution is to resolve these ambiguities by allowing the values to
 be cast to a particular type.  Casting a value to a type tells the
 interpreter how that value should be parsed.  Casting is done by
-prefixing a value with the type name, surrounded by angle brackets;
-`<...>`.
+prefixing a value with the type name, surrounded by brackets;
+`(...)`.
 
 .Syntax
 ----
-<...>value
+(...)value
 ----
 
 We can add a cast to the above example, as follows:
 
 [source,unlang]
 ----
-if ("%{sql:SELECT ipaddress FROM table WHERE user=%{User-Name}}" == <ipaddr>192.0.2.1) }
+if ("%{sql:SELECT ipaddress FROM table WHERE user=%{User-Name}}" == (ipaddr)192.0.2.1) }
     ....
 }
 ----
 
-In this example, we prefix the IP address with the string `<ipaddr>`.
+In this example, we prefix the IP address with the string `(ipaddr)`.
 The interpreter then knows that the value `192.0.2.` should be
 interpreted as the data type `ipaddr`, and not as the literal string
 `"192.0.2."`.
@@ -112,6 +112,16 @@ interpreted as the data type `ipaddr`, and not as the literal string
 For a full list of data types which can be used in a cast, please see
 the xref:unlang/type/all_types.adoc[list of data types] page, and the
 "Basic Type Types" section.
+
+In most cases, the server can automatically determine what data type
+to use.  The cast syntax is used when either the data type is
+ambiguous, or when data should be normalized prior to comparison, or
+when a specific data type is required.
+
+=== Compatibility
+
+For compatibility with version 3, the `<cast>` syntax is also
+supported.  We recommend, however, that people use the new syntax.
 
 // Copyright (C) 2021 Network RADIUS SAS.  Licenced under CC-by-NC 4.0.
 // Development of this documentation was sponsored by Network RADIUS SAS.
