--- a/doc/antora/modules/reference/pages/unlang/edit.adoc
+++ b/doc/antora/modules/reference/pages/unlang/edit.adoc
@@ -84,11 +84,11 @@ operator which is permitted is `=`.  The server *will not start* if
 any other operator is used._
 
 If the _<rhs>_ is an "in-place" list, then all of the
-xref:xlat/index.adoc[string expansions] are valid, just as are
+xref:xlat/index.adoc[dynamic expansions] are valid, just as are
 xref:reference:unlang/attr.adoc[attribute references].
 
 As a special case, the _<rhs>_ can also be a string, or a
-xref:xlat/index.adoc[string expansion].  If so, the string is
+xref:xlat/index.adoc[dynamic expansion].  If so, the string is
 interpreted as a set of attribute definitions, as if it was an
 "in-place" list.  For example, `"Filter-Id = foo"`
 
@@ -283,7 +283,7 @@ change the attribute _value_.
 
 The _<rhs>_ can be a reference to another attribute
 (e.g. `request.Filter-Id`).  If the field is a double-quoted string,
-it undergoes xref:xlat/index.adoc[string expansion], and the resulting
+it undergoes xref:xlat/index.adoc[dynamic expansion], and the resulting
 value is processed as described above.
 
 In most cases, the edit operations "do the right thing".  For example,
