--- a/doc/antora/modules/reference/nav.adoc
+++ b/doc/antora/modules/reference/nav.adoc
@@ -49,6 +49,7 @@
 
 ** xref:type/index.adoc[Data Types]
 *** xref:type/index.adoc[List of Data Types]
+*** xref:type/cast.adoc[Casts]
 *** xref:type/ip.adoc[IP Addresses]
 *** xref:type/numb.adoc[Numbers]
 *** xref:type/string/single.adoc[Single Quoted Strings]
