--- a/doc/antora/modules/reference/pages/type/double.adoc
+++ b/doc/antora/modules/reference/pages/type/double.adoc
@@ -47,7 +47,7 @@ In general, creating strings via xref:xlat/index.adoc[dynamic
 expansions] will result in the _printed_ version of the expansion
 being used.
 
-.Example
+.Example of double-quoted string expansion
 [source,unlang]
 ----
 "User-Name is %{User-Name}"
@@ -65,36 +65,27 @@ When a string is created via an
 xref:unlang/expression.adoc[expression] using the `+` operator, the
 resulting string can be quite different, depending on the inputs.
 
-.Example
+.Example of casting to 'string'
 [source,unlang]
 ----
 "User-Name is " + &User-Name
 "IP Address is " + (string) &reply.Framed-IP-Address
 ----
 
-The first expansion here returns the same string as the previous
-example `"User-Name is %{User-Name}"`.  This behavior is because the
-`User-Name` attribute is defined as type `string`.  So appending a
-`string` to a `string` yields a `string`.
+The output strings here (with casting) are the same as for the
+previous example.  Note that we do not have to cast `&User-Name`,
+because it is already a string.
 
-However, the second example returns the string `"IP Address is "`
-followed by four (4) bytes of the actual IP address, with embedded
-zeros, and other non-ASCII characters
+.Example of casting to 'octets'
+[source,unlang]
+----
+"User-Name is " + (octets) &User-Name
+"IP Address is " + (octets) &reply.Framed-IP-Address
+----
 
-This behavior is because the xref:type/cast.doc[cast] operator
-`(string)` will convert the data type from `ipv4addr` to `string`, but
-it will not change or modify the _contents_ of the data.  The result
-of the `+` concatenation is therefore the original `string`, followed
-by the 4 bytes of the `ipv4addr` data.
+The output strings here are completely different than for the previous
+examples.  The output data type is `octets`, and not `string`.
 
-If the printed version of the data is needed, the expansion should be
-enclosed in double-quotes, as in the first example.
-
-=== To Remember
-
-`"foo" + (string) &Bar` produces `"foo"` plus `&Bar` _cast_ to a string.
-
-`"foo%{Bar}"` produces `"foo"` plus `&Bar` _printed_ to a string.
 
 // Copyright (C) 2021 Network RADIUS SAS.  Licenced under CC-by-NC 4.0.
 // Development of this documentation was sponsored by Network RADIUS SAS.
